--- a/widgets/workspace/modules/plain-js-widget-agnostic/package.json
+++ b/widgets/workspace/modules/plain-js-widget-agnostic/package.json
@@ -16,6 +16,13 @@
   "scripts": {
     "build": "liferay build",
     "clean": "liferay clean",
-    "deploy": "liferay deploy"
+    "deploy": "liferay deploy",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4"
   }
 }
