feat(widgets): Add react-widget-agnostic

--- a/widgets/workspace/package.json
+++ b/widgets/workspace/package.json
@@ -3,7 +3,8 @@
     "workspaces": {
         "packages": [
             "modules/plain-js-widget",
-            "modules/plain-js-widget-agnostic"
+            "modules/plain-js-widget-agnostic",
+            "modules/react-widget-agnostic"
         ]
     }
 }
