--- a/widgets/workspace/modules/react-widget-agnostic/package.json
+++ b/widgets/workspace/modules/react-widget-agnostic/package.json
@@ -18,7 +18,13 @@
   "scripts": {
     "build": "liferay build",
     "clean": "liferay clean",
-    "deploy": "liferay deploy"
+    "deploy": "liferay deploy",
+    "test": "jest"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
+  }
 }
