--- a/widgets/workspace/package.json
+++ b/widgets/workspace/package.json
@@ -4,7 +4,8 @@
         "packages": [
             "modules/plain-js-widget",
             "modules/plain-js-widget-agnostic",
-            "modules/react-widget-agnostic"
+            "modules/react-widget-agnostic",
+            "modules/react-widget"
         ]
     }
 }
