--- a/widgets/workspace/modules/react-widget/package.json
+++ b/widgets/workspace/modules/react-widget/package.json
@@ -16,6 +16,13 @@
   "scripts": {
     "build": "liferay build",
     "clean": "liferay clean",
-    "deploy": "liferay deploy"
+    "deploy": "liferay deploy",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
