--- a/cx-workspace/package.json
+++ b/cx-workspace/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "workspaces": {
         "packages": [
-            "client-extensions/testing-cx-custom-element"
+            "client-extensions/testing-cx-custom-element",
+            "client-extensions/project-library"
         ]
     }
 }
