fix: Export project-library as ESM from package.json

--- a/cx-workspace/client-extensions/project-library/package.json
+++ b/cx-workspace/client-extensions/project-library/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./vite-build/index.js",
+  "exports": {
+    ".": "./vite-build/index.js",
+    "./*": "./vite-build/*"
+  },
   "scripts": {
     "build": "tsc && vite build"
   },
