--- a/cx-workspace/client-extensions/project-library/package.json
+++ b/cx-workspace/client-extensions/project-library/package.json
@@ -8,11 +8,16 @@
     "./*": "./vite-build/*"
   },
   "scripts": {
-    "build": "tsc && vite build"
+    "build": "yarn build:webpack",
+    "build:vite": "tsc && vite build",
+    "build:webpack": "webpack --mode production"
   },
   "devDependencies": {
     "glob": "^10.3.10",
+    "ts-loader": "^9.5.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
