feat: Add webpack-project as customElement CX

--- a/cx-workspace/client-extensions/project-library/package.json
+++ b/cx-workspace/client-extensions/project-library/package.json
@@ -8,7 +8,7 @@
     "./*": "./vite-build/*"
   },
   "scripts": {
-    "build": "yarn build:webpack",
+    "build": "yarn build:vite",
     "build:vite": "tsc && vite build",
     "build:webpack": "webpack --mode production"
   },
