--- a/cx-workspace/package.json
+++ b/cx-workspace/package.json
@@ -4,7 +4,8 @@
         "packages": [
             "client-extensions/testing-cx-custom-element",
             "client-extensions/project-library",
-            "client-extensions/vite-project"
+            "client-extensions/vite-project",
+            "client-extensions/webpack-project"
         ]
     }
 }
