fix: Generate project-library files after instaling it

--- a/cx-workspace/client-extensions/project-library/package.json
+++ b/cx-workspace/client-extensions/project-library/package.json
@@ -8,6 +8,7 @@
     "./*": "./vite-build/*"
   },
   "scripts": {
+    "postinstall": "yarn build",
     "build": "yarn build:vite",
     "build:vite": "tsc && vite build",
     "build:webpack": "webpack --mode production"
